--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,17 +75,36 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: SDGothic_Neo
+      fonts:
+        - asset: assets/fonts/Apple_SDGothic_Neo/AppleSDGothicNeoL.ttf
+          weight: 300
+        - asset: assets/fonts/Apple_SDGothic_Neo/AppleSDGothicNeoR.ttf
+          weight: 400
+        - asset: assets/fonts/Apple_SDGothic_Neo/AppleSDGothicNeoM.ttf
+          weight: 500
+        - asset: assets/fonts/Apple_SDGothic_Neo/AppleSDGothicNeoSB.ttf
+          weight: 600
+        - asset: assets/fonts/Apple_SDGothic_Neo/AppleSDGothicNeoB.ttf
+          weight: 700
+    - family: Frank_Ruhl_Libre
+      fonts:
+        - asset: assets/fonts/Frank_Ruhl_Libre/FrankRuhlLibre-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Frank_Ruhl_Libre/FrankRuhlLibre-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Frank_Ruhl_Libre/FrankRuhlLibre-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Frank_Ruhl_Libre/FrankRuhlLibre-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Frank_Ruhl_Libre/FrankRuhlLibre-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Frank_Ruhl_Libre/FrankRuhlLibre-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Frank_Ruhl_Libre/FrankRuhlLibre-Black.ttf
+          weight: 800
+        
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
