--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ flutter:
 
   assets:
     - assets/
+    - assets/images/
+    - assets/images/about_image.png
     
   #   - images/a_dot_ham.jpeg
 
