--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,18 +62,16 @@ flutter:
   # To add assets to your application, add an assets section, like this:
 
   assets:
-    - assets/
-    - assets/images/
     - assets/images/about_image.png
-    # - assets/images/skill/dart_image.png
-    # - assets/images/skill/flutter_image.png
-    # - assets/images/skill/aws_image.png
-    # - assets/images/skill/restapi_image.png
-    # - assets/images/skill/sequelize_image.png
-    # - assets/images/skill/mysql_image.png
-    # - assets/images/skill/git_image.png
-    # - assets/images/skill/slack_image.png
-    # - assets/images/skill/notion_image.png
+    - assets/images/skill/dart_image.png
+    - assets/images/skill/flutter_image.png
+    - assets/images/skill/aws_image.png
+    - assets/images/skill/restapi_image.png
+    - assets/images/skill/sequelize_image.png
+    - assets/images/skill/mysql_image.png
+    - assets/images/skill/git_image.png
+    - assets/images/skill/slack_image.png
+    - assets/images/skill/notion_image.png
     
   #   - images/a_dot_ham.jpeg
 
