--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2ㅈ
+  cupertino_icons: ^1.0.2
   # 상태관리자(향후 복잡해지면 관리 예정)
   get: ^4.6.6
   # svg 리더
