--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   # 이미지 슬라이더
   carousel_slider: ^4.2.1
   # url로 이동
-  url_launcher: ^6.2.4
+  # url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
