--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,36 +28,27 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^5.0.0
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  # 상태관리자(향후 복잡해지면 관리 예정)
-  get: ^4.6.6
-  # svg 리더
-  flutter_svg: ^2.0.9
-  # 이미지 슬라이더
-  carousel_slider: ^4.2.1
-  
-  
+  flutter_riverpod: ^2.6.1
+  flutter_svg: ^2.0.15
+  riverpod_annotation: ^2.6.1
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
+  build_runner: ^2.4.13
+  custom_lint: ^0.7.0
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  riverpod_generator: ^2.6.3
+  riverpod_lint: ^2.6.3
+  freezed: ^2.5.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -67,7 +58,6 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-
   assets:
     - assets/images/
     - assets/images/skill/
@@ -80,10 +70,8 @@ flutter:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -118,7 +106,5 @@ flutter:
           weight: 800
         - asset: assets/fonts/Frank_Ruhl_Libre/FrankRuhlLibre-Black.ttf
           weight: 800
-        
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
