--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,9 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.15
-  riverpod_annotation: ^2.6.1
   freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   build_runner: ^2.4.13
@@ -43,9 +44,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.5.2
   riverpod_generator: ^2.6.3
   riverpod_lint: ^2.6.3
-  freezed: ^2.5.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
