--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.20.5
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.15
   freezed_annotation: ^2.4.4
+  hooks_riverpod: ^2.6.1
   json_annotation: ^4.9.0
+  lottie: ^3.1.3
   riverpod_annotation: ^2.6.1
 
 dev_dependencies:
